tdf#167657 writerfilter: only move sectPr bottomMargin after pageBreak

This 25.2 backport includes the new variable "m_xPreStartingRange"
that was introduced in commit a2a88f0073bdd5119745679daa61469e87002579.

This fixes a 25.2.4 regression from
my commit 5ff1fd13f1879105ecc0541c55f30cea32ae54f4.

The problem was that I treated all sectPr's as page breaks,
and that meant that the below spacing of the last paragraph
before a continuous section break was being unintentionally changed.

This is a bit tricky because at the time of the section break
we have no idea WHY the new break started.
Only MUCH LATER at the end of the entire section can we discover
whether it was a page break instead of a continuous (or column) break.
Thankfully someone has already calculated and stored
"the last paragraph before this section started".

A continuous section break's above and below spacing
should have no direct effect on layout, but it does affect
how much the next paragraph's top spacing collapses.

TODO: somehow the below spacing from a continuous section break
needs to reduce the top spacing from the following paragraph.
At this point I can't imagine how this could reliably happen.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf167657_sectPr_bottomSpacing

Change-Id: Ifd908e2104f7e1efb86947dd88e7ea6874346d58
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188298
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188299
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188516